--- a/src/components/Prize/Prize.scss
+++ b/src/components/Prize/Prize.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 20%;
   height: 100vh;
-  background-color: #0b1d30;
+  background-color: #0f1e2e;
   color: rgb(255, 255, 253);
 }
 
